新增一个jQuery插件的显示或隐藏功能

--- a/css/master.css
+++ b/css/master.css
@@ -17,3 +17,11 @@
 .footer {
     height: 100px;
 }
+
+.inpclass{
+    margin-left: 300px;
+    width: 400px;
+    height: 50px;
+    background: #b9b7b7;
+    border: 0;
+}
